<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--TODO: Add Group-->
    <item
        android:id="@+id/notification_pen_color"
        android:icon="@drawable/ic_palette"
        android:orderInCategory="100"
        android:title="@string/pen_colour"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notification_line_width"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="200"
        android:title="@string/line_width"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notification_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="300"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notification_clear_all"
        android:icon="@drawable/ic_clear_all"
        android:orderInCategory="400"
        android:title="@string/clear_all"
        app:showAsAction="ifRoom" />
    <!--TODO: Change Eraser Logo-->
</menu>